# Triage

./: .env.example  .gitignore  AI_ENGINE.md  ARCHITECTURE.md  README.md  SETUP_AND_DEPLOYMENT.md  alembic.ini  docker-compose.yml  pyproject.toml  requirments.txt
alembic/: env.py
alembic/versions/: 0001_initial_migration.py  0002_testables_id_type_change.py
scripts/: ingestion.py
src/triage/: __init__.py  config.py  main.py
src/triage/api/: deps.py
src/triage/api/routes/: health.py  team_members.py  teams.py  testables.py
src/triage/core/graph/: assignment_graph.py  state.py
src/triage/core/graph/nodes/: capacity.py  constraint_scorer.py  eligibility.py  expertise_rag.py  orchestrator_llm.py
src/triage/core/kafka/: consumer_assignment.py  consumer_notification.py  consumer_rebalancing.py  init_topics.py  producer.py  topics.py
src/triage/core/notifications/: email_sender.py
src/triage/core/notifications/templates/: assignment_email.html
src/triage/core/rag/: vector_store.py
src/triage/core/scoring/: constraint_weights.py
src/triage/models/db/: __init__.py  assignment_history.py  dev_history.py  team.py  team_member.py  testable.py
src/triage/models/schemas/: assignment_decision.py  kafka_events.py  priority.py  role.py  testable_status.py  testable_type.py  webhook_payloads.py
src/triage/models/utils/: db_types.py
src/triage/repositories/: assignment_repo.py  team_member_repo.py  team_repo.py  testable_repo.py
src/triage/services/: team_member_service.py  team_service.py  testable_service.py
(+2 files in other folders)
