[project]
name = "triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.8",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/alembic",
    "/README.md",
    "/.env.example",
    "/alembic.ini",
]
